fixed the spacing issue that the skills page had

--- a/slick/slick.css
+++ b/slick/slick.css
@@ -51,7 +51,7 @@
 .slick-track
 {
     position: relative;
-    height: 225px;
+    height: 250px;
     top: 0;
     left: 0;
 
